# ComputerClubCpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
include/controllers/: computer_club_controller.h  computer_club_factory.h  i_computer_club_controller.h
include/models/: client.h  club_configuration.h  event.h  table.h  time.h
include/services/: billing_service.h  client_manager.h  event_manager.h  queue_manager.h  table_manager.h
include/utils/: exceptions.h  file_reader.h
include/views/: output_formatter.h
src/: main.cpp
src/controllers/: computer_club_controller.cpp  computer_club_factory.cpp
src/models/: client.cpp  club_configuration.cpp  event.cpp  table.cpp  time.cpp
src/services/: billing_service.cpp  client_manager.cpp  event_manager.cpp  queue_manager.cpp  table_manager.cpp
src/utils/: exceptions.cpp  file_reader.cpp
src/views/: output_formatter.cpp
tests/controllers/: computer_club_controller_test.cpp
tests/models/: time_test.cpp
tests/services/: queue_manager_test.cpp  table_manager_test.cpp
tests/views/: output_formatter_test.cpp
